got some tests passing

--- a/client/index.html
+++ b/client/index.html
@@ -23,6 +23,11 @@
       <h1>chatterbox</h1>
       <input type="text" placeholder="Send your message here"></input>
       <a href="#" class="sendChat">Send message</a>
+      <div id="rooms">
+        Room:
+        <select id="roomSelect">
+        </select>
+      </div>
       <div id="chats">
       </div>
     </div>
