--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -20,6 +20,7 @@
 
   <!-- Source files -->
   <script src="client/scripts/app.js"></script>
+  <script src="client/scripts/views.js"></script>
 
 </head>
 <body>
