Got all tests passing except one and it looks like that one may be an issue with the test

--- a/client/index.html
+++ b/client/index.html
@@ -22,12 +22,16 @@
     <div id="main">
       <h1>chatterbox</h1>
       <input type="text" placeholder="Send your message here"></input>
-      <a href="#" class="sendChat">Send message</a>
+      <!-- <a href="#" class="sendChat">Send message</a> -->
       <div id="rooms">
         Room:
         <select id="roomSelect">
         </select>
       </div>
+      <form action="#" id="send" method="post">
+        <input type="text" name="message" id="message"/>
+        <input type="submit" name="submit" class="submit"/>
+      </form>
       <div id="chats">
       </div>
     </div>
