--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,6 @@
   <body>
     <div id="main">
       <h1>chatterbox</h1>
-      <input type="text" placeholder="Send your message here"></input>
       <!-- <a href="#" class="sendChat">Send message</a> -->
       <div id="rooms">
         Room:
@@ -29,7 +28,7 @@
         </select>
       </div>
       <form action="#" id="send" method="post">
-        <input type="text" name="message" id="message"/>
+        <input type="text" name="message" placeholder="Enter you chat here ..." id="message"/>
         <input type="submit" name="submit" class="submit"/>
       </form>
       <div id="chats">
