Added Ajax Loader & few UI changes.

--- a/client/index.html
+++ b/client/index.html
@@ -31,6 +31,7 @@
         <input type="text" name="message" placeholder="Enter you chat here ..." id="message"/>
         <input type="submit" name="submit" class="submit"/>
       </form>
+      <img id="loading" src="images/spiffygif_46x46.gif"/>
       <div id="chats">
       </div>
     </div>
